tests/snapshots/run_wpt_conformance__onnx_tile_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "tile.https.any.js",
    "tile float16 1D tensor",
    "onnx",
    "PASS",
)
